--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -574,7 +574,7 @@ p{
 .our-formals-cont {
 	width: 60%;
 	float: right;
-	background-color: #fff;
+	background-color: #000;
 	min-height: 390px;
 	opacity: .7;
 	filter: alpha(opacity=70); /* IE6+ */
