--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -492,6 +492,8 @@ p{
 .our-sub-cont {
 	width: 60%;
 	float: right;
+	color: #000;
+	font-weight: 300;
 	background-color: #fff;
 	min-height: 390px;
 	opacity: .7;
