--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -591,7 +591,7 @@ p{
 .our-sub-formals h4 {
 	font-size: 35px;
 	text-transform: uppercase;
-	color: #000;
+	color: #fff;
 	padding-bottom: 20px;
 }
 .our-sub-formals p {
