--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -492,8 +492,6 @@ p{
 .our-sub-cont {
 	width: 60%;
 	float: right;
-	color: #000;
-	font-weight: 300;
 	background-color: #fff;
 	min-height: 390px;
 	opacity: .7;
@@ -576,7 +574,7 @@ p{
 .our-formals-cont {
 	width: 60%;
 	float: right;
-	background-color: #000;
+	background-color: #fff;
 	min-height: 390px;
 	opacity: .7;
 	filter: alpha(opacity=70); /* IE6+ */
@@ -591,7 +589,7 @@ p{
 .our-sub-formals h4 {
 	font-size: 35px;
 	text-transform: uppercase;
-	color: #fff;
+	color: #000;
 	padding-bottom: 20px;
 }
 .our-sub-formals p {
