--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -555,14 +555,15 @@ p{
 	padding-bottom: 20px;
 }
 .our-sub-corporate p {
+	color: #fff;
 	font-size: 20px;
-	font-weight: 300;
+	font-weight: 500;
 	line-height: 30px;
 	padding: 20px 0px;
 }
 .our-sub-corporate a {
 	font-size: 20px;
-	font-weight: 300;
+	font-weight: 500;
 	color: #fff;
 }
 .our-formals-sub {
@@ -575,7 +576,7 @@ p{
 .our-formals-cont {
 	width: 60%;
 	float: right;
-	background-color: #fff;
+	background-color: #000;
 	min-height: 390px;
 	opacity: .7;
 	filter: alpha(opacity=70); /* IE6+ */
