--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -502,7 +502,7 @@ p{
 
 .our-sub-fashion {
 	padding: 100px 20px 0px 20px;
-	text-align: right;
+	text-align: left;
 }
 .our-sub-fashion h4 {
 	font-size: 35px;
