--- a/wp-content/themes/bootstrap2wordpress/style.css
+++ b/wp-content/themes/bootstrap2wordpress/style.css
@@ -624,7 +624,7 @@ p{
 	float: right;
 	
 	min-height: 390px;
-	background-color: #fff;
+	background-color: #000;
 	opacity: .7;
 	filter: alpha(opacity=70); /* IE6+ */
 	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=70); /* IE6+ */
@@ -637,10 +637,13 @@ p{
 .our-sub-leather h4 {
 	font-size: 35px;
 	text-transform: uppercase;
-	color: #000;
+	color: #fff;
+	font-weight: 500;
 	padding-bottom: 20px;
 }
 .our-sub-leather p {
+	color: #fff;
+	font-weight: 500;
 	font-size: 20px;
 	font-weight: 300;
 	line-height: 30px;
@@ -648,8 +651,8 @@ p{
 }
 .our-sub-leather a {
 	font-size: 20px;
-	font-weight: 300;
-	color: #000;
+	color: #fff;
+	font-weight: 500;
 }
 .our-uniforms-sub {
 	background-image: url(/wp-content/themes/bootstrap2wordpress/assets/img/product-img-4.jpg);
