--- a/wp-content/themes/strings-unlimited/style.css
+++ b/wp-content/themes/strings-unlimited/style.css
@@ -1968,8 +1968,8 @@ ul,li{
 }
 
 .icon-left-column .text{
-	font-size:14px;
-	margin-bottom:15px;	
+	font-size:2em;
+	margin-bottom:.5em;	
 }
 
 .icon-left-column .read-more{
