--- a/wp-content/themes/strings-unlimited/style.css
+++ b/wp-content/themes/strings-unlimited/style.css
@@ -1931,7 +1931,7 @@ ul,li{
 .four-col-fluid .column{
 	padding:50px 30px;
 	color:#ffffff;
-	width:25%;
+	width:5em;
 	width:20%;
 	height: 335px;
 	float:left;
