--- a/wp-content/themes/strings-unlimited/style.css
+++ b/wp-content/themes/strings-unlimited/style.css
@@ -1577,7 +1577,7 @@ ul,li{
 }
 
 .main-header .header-lower .logo-outer{
-	/* position:relative; */
+	position:relative;
 	float:left;
 }
 
@@ -1931,6 +1931,7 @@ ul,li{
 .four-col-fluid .column{
 	padding:50px 30px;
 	color:#ffffff;
+	width:25%;
 	width:20%;
 	height: 335px;
 	float:left;
