--- a/wp-content/themes/strings-unlimited/style.css
+++ b/wp-content/themes/strings-unlimited/style.css
@@ -808,12 +808,12 @@ textarea {
 .sticky {
 	display: block;
 }
-
+/*
 .post,
 .page {
 	margin: 0;
 }
-
+*/
 .updated:not(.published) {
 	display: none;
 }
