--- a/wp-content/themes/strings-unlimited/assets/css/responsive.css
+++ b/wp-content/themes/strings-unlimited/assets/css/responsive.css
@@ -148,7 +148,7 @@
 	
 	.main-header .header-top .top-right, 
 	.main-header .header-top .top-left {
-		width: 100%;
+		/* width: 100%; */
 		text-align:center;
 	}
 	
